updated: geant4-multithreading & merged: pluto+g4->mc-sim

--- a/physics-simulations/geant4-multithreading/Dockerfile
+++ b/physics-simulations/geant4-multithreading/Dockerfile
@@ -16,14 +16,17 @@ RUN mkdir geant4-build
 WORKDIR /root/geant4-build
 
 RUN cmake -DCMAKE_INSTALL_PREFIX=/root/geant4-install -DGEANT4_INSTALL_DATA=ON -DGEANT4_BUILD_MULTITHREADED=ON -DGEANT4_USE_OPENGL_X11=ON /root/geant4.10.05.p01/
-RUN make -j2
+RUN make -j4
 RUN make install
 RUN rm -rf /root/geant4.10.05.p01/
 
 WORKDIR /root/
 
-RUN echo "source /root/geant4-install/bin/geant4.sh; " >> .bashrc
+RUN echo "echo ""; echo "Welcome in GEANT4 container [https://github.com/aszadzinski/dockerfiles/tree/master/physics-simulations/geant4-multithreading]"; echo "Geant environment variables has been initialized"; echo ""; echo "Type:"; echo "  sh init.sh"; echo "to execute Public/run.sh."; echo "" " >> .bashrc
+RUN echo "echo "Opening Public/run.sh file..."; echo ""; sh /root/Public/run.sh; echo ""; echo "Done. Adios"" >> init.sh 
 
-RUN echo "echo "Opening run file..."; sh run; echo "Starting bash:"; bash" >> init.sh 
+#ENTRYPOINT ["sh","init.sh"]
+CMD sh init.sh
+
 
 CMD sh init.sh
